# semantic_bibtool

./: .gitignore  README.md  pyproject.toml  semantic_scholar.py  setup.py
semantic_bibtool/: __init__.py  __main__.py
tests/: test_all.py
tests/data/: titles.txt  zotero.csv
