[tool.poetry]
name = "semantic_bibtool"
version = "0.1.0"
description = ""
authors = ["Robert Dyro <robert.dyro@gmail.com>"]
license = "MIT"
include = ["semantic_bibtool/api_key.txt"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.64.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
semantic_bibtool = 'semantic_bibtool:main'
