[project]
name = "semantic_bibtool"
version = "0.2.0"
authors = [
  { name="Robert Dyro", email="robert.dyro@gmail.com" },
]
description = "Command Line Tool for generating bibliography files using Semantic Scholar API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "tqdm",
    "requests",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/rdyro/semantic_bibtool"
"Bug Tracker" = "https://github.com/rdyro/semantic_bibtool"

[tool.ruff]
line-length = 100

